--- a/MixablyMac/Base.lproj/Main.storyboard
+++ b/MixablyMac/Base.lproj/Main.storyboard
@@ -840,7 +840,7 @@
                                         </customSpacing>
                                     </stackView>
                                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="JtB-Ir-b3o" userLabel="MixiblyButton">
-                                        <rect key="frame" x="680" y="16" width="39" height="39"/>
+                                        <rect key="frame" x="650" y="16" width="39" height="39"/>
                                         <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="Mixably" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="QNc-u4-0jA">
                                             <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
                                             <font key="font" metaFont="system"/>
@@ -849,15 +849,31 @@
                                             <action selector="toogleMixably:" target="28T-H6-w9b" id="beL-if-WYF"/>
                                         </connections>
                                     </button>
+                                    <button translatesAutoresizingMaskIntoConstraints="NO" id="50k-d0-NM3">
+                                        <rect key="frame" x="701" y="36" width="24" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="24" id="0ob-82-aPV"/>
+                                            <constraint firstAttribute="height" constant="24" id="I51-xD-alG"/>
+                                        </constraints>
+                                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSActionTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="4eD-o2-Ank">
+                                            <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                        <connections>
+                                            <action selector="showMenu:" target="28T-H6-w9b" id="W3t-BN-QKd"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="50k-d0-NM3" firstAttribute="top" secondItem="fQU-Bp-qp8" secondAttribute="top" constant="10" id="2Ml-b0-tbV"/>
                                     <constraint firstItem="JtB-Ir-b3o" firstAttribute="centerY" secondItem="fQU-Bp-qp8" secondAttribute="centerY" id="3E7-0C-d95"/>
-                                    <constraint firstAttribute="trailing" secondItem="JtB-Ir-b3o" secondAttribute="trailing" constant="16" id="Lc6-nQ-PkW"/>
+                                    <constraint firstAttribute="trailing" secondItem="JtB-Ir-b3o" secondAttribute="trailing" constant="46" id="Lc6-nQ-PkW"/>
                                     <constraint firstItem="UBA-Ji-cX5" firstAttribute="leading" secondItem="gqe-YF-fQj" secondAttribute="trailing" constant="16" id="esI-jC-C3I"/>
                                     <constraint firstItem="gqe-YF-fQj" firstAttribute="leading" secondItem="fQU-Bp-qp8" secondAttribute="leading" constant="8" id="kqX-sd-w2M"/>
                                     <constraint firstItem="UBA-Ji-cX5" firstAttribute="centerY" secondItem="fQU-Bp-qp8" secondAttribute="centerY" id="pC1-EE-H93"/>
                                     <constraint firstItem="gqe-YF-fQj" firstAttribute="centerY" secondItem="fQU-Bp-qp8" secondAttribute="centerY" id="qPN-yS-2IJ"/>
                                     <constraint firstItem="UBA-Ji-cX5" firstAttribute="centerX" secondItem="fQU-Bp-qp8" secondAttribute="centerX" id="snD-f4-7Fa"/>
+                                    <constraint firstAttribute="trailing" secondItem="50k-d0-NM3" secondAttribute="trailing" constant="10" id="yTR-L8-oeF"/>
                                 </constraints>
                             </visualEffectView>
                         </subviews>
@@ -893,6 +909,7 @@
     <resources>
         <image name="FastForward" width="29" height="20"/>
         <image name="Mixably" width="39" height="39"/>
+        <image name="NSActionTemplate" width="14" height="14"/>
         <image name="Play" width="30" height="31"/>
         <image name="Repeat" width="18" height="20"/>
         <image name="Rewind" width="28" height="20"/>
